--- a/accounts/templates/accounts/signup.html
+++ b/accounts/templates/accounts/signup.html
@@ -1,5 +1,6 @@
-{% extends 'base.html' %} {% block title %}Sign Up{% endblock title %} {% block
-content %}
+{% extends 'base.html' %} 
+{% block title %}Sign Up{% endblock title %}
+{% block content %}
 <form method="POST">
   {% csrf_token %} {{form.as_p}}
   <input type="submit" value="Submit" />
